[tool.poetry]
name = "casino"
version = "0.1.0"
description = ""
authors = ["timrybakov <timurjh0608@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.18.0"
aiogram-tonconnect = "^0.14.5"
environs = "^14.1.1"
isort = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
